--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,1 +1,1 @@
-section{display:inline-block;zoom:1;*display:block;vertical-align:top}
+section #section1{background:green}section #section5{background:purple}section .slide{background:purple}
