--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -123,7 +123,11 @@ section{
 		background: #76D1F5;
 		p{
 			width: 50%;
-			margin: 0 auto;
+			font-size: 1.4em;
+			@include mza;
+		}
+		a{
+			color: white;
 		}
 	}
 	span.arrow{
