Import icons, add Buffer blue color variable

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -4,7 +4,10 @@
 * @chrytonbaine
 */
 
+@import 'icons.css';
+
 $buffergreen: #76b852;
+$bufferblue: #168eea;
 $andreworange: #FC7F13;
 
 @mixin dib{
